# anki-tookit

./: .gitignore
anki_helper/: Cargo.toml
anki_helper/src/modules/init/: utils.rs
cc-proxy/: CLAUDE.md  Cargo.toml  DisableProxy.sh  EnableProxy.sh  README.md  RUST_REDESIGN.md  config.toml.template  settings.json
cc-proxy/.cargo/: config.toml
cc-proxy/crates/proxy-core/: Cargo.toml
cc-proxy/crates/proxy-core/src/: config.rs  db.rs  export.rs  lib.rs  models.rs  sse.rs  store.rs  summary.rs
cc-proxy/crates/proxy-hook-agent/src/: main.rs
cc-proxy/crates/proxy-server/: Cargo.toml
cc-proxy/crates/proxy-server/src/: api.rs  main.rs  mcp.rs  proxy.rs  tee.rs  ws.rs
cc-proxy/doc/: api.md  architecture.md  build.md  config.md  database.md  frontend.md  proxy.md
cc-proxy/doc/feat/: upstream-effort.md
cc-proxy/wwwroot/: index.html
cc-proxy/wwwroot/css/: style.css
cc-proxy/wwwroot/js/: app.js
proxy/: Cargo.toml  DisableProxy.sh  README.md  RUST_REDESIGN.md  config.toml
proxy/crates/proxy-core/: Cargo.toml
proxy/crates/proxy-core/src/: config.rs  export.rs  lib.rs  models.rs  sse.rs
proxy/crates/proxy-hook-agent/: Cargo.toml
proxy/crates/proxy-hook-agent/src/: main.rs
proxy/crates/proxy-server/: Cargo.toml
proxy/crates/proxy-server/src/: api.rs  main.rs  proxy.rs  tee.rs  ws.rs
proxy/wwwroot/: index.html
proxy/wwwroot/css/: style.css
proxy/wwwroot/js/: app.js
rust-sync/: Cargo.toml
rust-sync/proto/: sync.proto
rust-sync/rsync-core/: Cargo.toml
rust-sync/rsync-core/src/: chunker.rs  lib.rs
rust-sync/server/: Cargo.toml  README.md  build.rs
rust-sync/server/src/: auth.rs  db.rs  main.rs  service.rs
rust-vfsd/: Cargo.toml  README.md
rust-vfsd/apps/server/: Cargo.toml
rust-vfsd/apps/server/src/: cli.rs  lib.rs  main.rs
rust-vfsd/apps/server/src/auth/: jwt.rs  middleware.rs  mod.rs  permissions.rs  rate_limit.rs
rust-vfsd/apps/server/src/config/: .env.example  default.yaml
rust-vfsd/apps/server/src/handlers/: admin.rs  health.rs  mod.rs  rest.rs  websocket.rs
rust-vfsd/apps/vfs-cmd/: Cargo.toml
rust-vfsd/apps/vfs-cmd/src/: main.rs
rust-vfsd/crates/vfs-core/: Cargo.toml
rust-vfsd/crates/vfs-core/src/: config.rs  lib.rs
rust-vfsd/crates/vfs-core/src/models/: mod.rs  stats.rs  sync_cursor.rs  sync_log.rs  token.rs
rust-vfsd/crates/vfs-core/src/utils/: compression.rs  crypto.rs
rust-vfsd/crates/vfs-service/: Cargo.toml
rust-vfsd/crates/vfs-service/src/: lib.rs  metrics.rs  server.rs  test_utils.rs
rust-vfsd/crates/vfs-service/src/auth/: jwt.rs  middleware.rs  mod.rs  permissions.rs  rate_limit.rs
rust-vfsd/crates/vfs-service/src/handlers/: admin.rs  health.rs  mod.rs  rest.rs  websocket.rs
rust-vfsd/crates/vfs-service/src/services/: admin_service.rs  auth_service.rs  mod.rs  sync_service.rs  token_service.rs  user_service.rs
rust-vfsd/crates/vfs-storage/: Cargo.toml
rust-vfsd/crates/vfs-storage/src/: cache.rs  cache_service.rs  cached_database.rs  database.rs  file_store.rs  lib.rs
rust-vfsd/crates/vfs-sync/: Cargo.toml
rust-vfsd/crates/vfs-sync/src/: chunk_manager.rs  chunk_upload.rs  conflict.rs  engine.rs  filter.rs  lib.rs  packet.rs
rust-vfsd/migrations/: 001_create_users.sql  002_create_tokens.sql  003_create_sync_data.sql  004_create_chunks.sql
rust-vfsd/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs
rust-vfsd/src/auth/: jwt.rs  middleware.rs  mod.rs  permissions.rs  rate_limit.rs
rust-vfsd/src/handlers/: admin.rs  mod.rs  rest.rs  websocket.rs
rust-vfsd/src/models/: chunk.rs  conflict.rs  mod.rs  sync_cursor.rs  sync_log.rs  token.rs  user.rs
rust-vfsd/src/storage/: cache.rs  cache_service.rs  cached_database.rs  database.rs  file_store.rs  mod.rs  object_store.rs
rust-vfsd/src/sync/: chunk_manager.rs  conflict.rs  engine.rs  filter.rs  mod.rs  packet.rs  session.rs
rust-vfsd/src/utils/: mod.rs  vector_clock.rs
vfsd/: Cargo.toml
vfsd/src/: db.rs  main.rs  types.rs
vfsd/src/server/: auth.rs  handlers.rs  logger.rs  mod.rs
vfsd/src/tui/: mod.rs  state.rs  ui.rs
