[package]
name = "itookit-sync-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
description = "VFS Sync Server - Multi-device file synchronization service"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "sqlite", "chrono", "uuid"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Compression
flate2 = "1"
brotli = "3"

# Object Storage (optional)
aws-sdk-s3 = { version = "1", optional = true }

# Redis for caching (optional)
redis = { version = "0.24", features = ["tokio-comp"], optional = true }

[features]
default = []
s3 = ["aws-sdk-s3"]
redis-cache = ["redis"]

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }
