[package]
name = "itookit-sync-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <lizlok@gmmail.com>"]
description = "VFS Sync Server - Multi-device file synchronization service"
license = "MIT"

[features]
default = []
redis-cache = ["redis"]

[dependencies]
# Web 框架
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-full", "trace"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# 认证
jsonwebtoken = "9"
argon2 = "0.5"

# 加密和哈希
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.21"

# 压缩
flate2 = "1"
brotli = "3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 配置
config = "0.14"
dotenvy = "0.15"  # 添加这个
clap = { version = "4.5", features = ["derive"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket
futures = "0.3"

# 缓存
moka = { version = "0.12", features = ["future"] }

# 指标
prometheus = "0.13"
once_cell = "1"

# 字节处理
bytes = "1"

# 错误处理
anyhow = "1"
thiserror = "1"

# 异步特性
async-trait = "0.1"

# Glob 模式匹配
glob = "0.3"
regex = "1"  # 添加这个


# 可选: Redis 支持
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
