[package]
name = "vfs-sync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] } 
axum-server = { version = "0.7", features = ["tls-rustls"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ipnetwork = "0.20"
rcgen = "0.12" 
dashmap = "5"
