[package]
name = "itookit-rsync-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tonic = "0.10"
prost = "0.12"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9"
argon2 = "0.5" # 密码哈希
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
dotenvy = "0.15"
anyhow = "1.0"
zstd = "0.13"
futures = "0.3"
bytes = "1.0"
sha2 = "0.10" # 如果需要额外校验，暂用 blake3 (rsync-core 已引入)
async-stream = "0.3" # 用于方便地构造 gRPC Stream

# 引入本地库
rsync-core = { path = "../rsync-core" }

[build-dependencies]
tonic-build = "0.10"
