[package]
name = "proxy-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
toml = "0.8"
