[package]
name = "proxy-server"
default-run = "proxy-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
proxy-core = { path = "../proxy-core" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "deflate"] }
rust-embed = "8"
bytes = "1"
http = "1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
mime_guess = "2"
toml = "0.8"
tokio-stream = "0.1"
anyhow = "1"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
