[package]
name = "proxy-hook-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hook-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
