[package]
name = "vfs-server" # 二进制文件名
version = "0.1.0"
edition = "2021"

[dependencies]
# 内部库依赖
vfs-core = { path = "../../crates/vfs-core" }
vfs-storage = { path = "../../crates/vfs-storage" }
vfs-sync = { path = "../../crates/vfs-sync" }

# 外部依赖 - 全部继承自根目录
# 注意：这里不需要再写 version 和 features 了
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # 这个如果根目录没定义，可以单独写
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# 修复报错的关键：继承根目录的配置（版本+特性）
jsonwebtoken = { workspace = true } 
base64 = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { version = "1.0", features = ["full"] } # 根目录没定义，单独写
clap = { workspace = true }

# --- 修复：添加缺失的依赖 ---
futures = { workspace = true }    # 修复 E0432, E0599 (WebSocket split)
prometheus = { workspace = true } # 修复 E0432, E0433 (Metrics)
once_cell = { workspace = true }  # 修复 E0433 (Metrics Lazy)
anyhow = { workspace = true }     # 修复 E0433 (CLI Result)
regex = { workspace = true }      # 修复 E0433 (Permissions regex)