[package]
name = "vfs-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
vfs-core = { path = "../vfs-core" }
vfs-storage = { path = "../vfs-storage" }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }